feat: Pagination Sample

--- a/UI/MVUX/MVUX/MVUX/Presentation/MainPage.xaml
+++ b/UI/MVUX/MVUX/MVUX/Presentation/MainPage.xaml
@@ -73,6 +73,13 @@
           </muxc:NavigationViewItem.Icon>
         </muxc:NavigationViewItem>
 
+        <muxc:NavigationViewItem uen:Region.Name="Pagination"
+                                 Content="Pagination">
+          <muxc:NavigationViewItem.Icon>
+            <SymbolIcon Symbol="Page" />
+          </muxc:NavigationViewItem.Icon>
+        </muxc:NavigationViewItem>
+
       </muxc:NavigationView.MenuItems>
 
       <Grid uen:Region.Attached="True"
