--- a/UI/MVUX/MVUX/MVUX/Presentation/MainPage.xaml
+++ b/UI/MVUX/MVUX/MVUX/Presentation/MainPage.xaml
@@ -80,6 +80,13 @@
 					</muxc:NavigationViewItem.Icon>
 				</muxc:NavigationViewItem>
 
+        <muxc:NavigationViewItem uen:Region.Name="Selection"
+                                 Content="Selection Page">
+          <muxc:NavigationViewItem.Icon>
+            <SymbolIcon Symbol="Page" />
+          </muxc:NavigationViewItem.Icon>
+        </muxc:NavigationViewItem>
+
         <muxc:NavigationViewItem uen:Region.Name="Pagination"
                                  Content="Pagination">
           <muxc:NavigationViewItem.Icon>
