--- a/UI/MVUX/MVUX/MVUX/Presentation/MainPage.xaml
+++ b/UI/MVUX/MVUX/MVUX/Presentation/MainPage.xaml
@@ -94,6 +94,13 @@
           </muxc:NavigationViewItem.Icon>
         </muxc:NavigationViewItem>
 
+        <muxc:NavigationViewItem uen:Region.Name="FeedViewCommand"
+                                 Content="FeedViewCommand">
+          <muxc:NavigationViewItem.Icon>
+            <SymbolIcon Symbol="Page" />
+          </muxc:NavigationViewItem.Icon>
+        </muxc:NavigationViewItem>
+
       </muxc:NavigationView.MenuItems>
 
 			<Grid uen:Region.Attached="True"
