chore: resolving PR comments

--- a/UI/MVUX/MVUX/MVUX/Presentation/RefreshListFeed/SignalPage.xaml
+++ b/UI/MVUX/MVUX/MVUX/Presentation/RefreshListFeed/SignalPage.xaml
@@ -9,6 +9,11 @@
 
 	<ScrollViewer>
 		<StackPanel>
+			<TextBlock Text="This sample demonstrates how to refresh a list using a Signal in MVUX. Clicking the button will refresh the list of items."
+					   Margin="10"
+					   FontSize="16"
+					   TextWrapping="Wrap" />
+
 			<ListView ItemsSource="{Binding SimpleList}">
 				<ListView.ItemTemplate>
 					<DataTemplate>
