--- a/UI/MVUX/MVUX/MVUX/Presentation/ListFeedSample/ListFeedPage.xaml
+++ b/UI/MVUX/MVUX/MVUX/Presentation/ListFeedSample/ListFeedPage.xaml
@@ -1,34 +1,42 @@
-﻿<Page
-    x:Class="MVUX.Presentation.ListFeedSample.ListFeedPage"
-    xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-    xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-    xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
-    xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-    xmlns:mvux="using:Uno.Extensions.Reactive.UI"
-    xmlns:utu="using:Uno.Toolkit.UI"
-    mc:Ignorable="d"
-    Background="{ThemeResource ApplicationPageBackgroundThemeBrush}">
+﻿<Page x:Class="MVUX.Presentation.ListFeedSample.ListFeedPage"
+	  xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
+	  xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+	  xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
+	  xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+	  xmlns:mvux="using:Uno.Extensions.Reactive.UI"
+	  xmlns:utu="using:Uno.Toolkit.UI"
+	  mc:Ignorable="d"
+	  Background="{ThemeResource ApplicationPageBackgroundThemeBrush}">
 
-  <Grid utu:SafeArea.Insets="Bottom,Top">
-    <mvux:FeedView Source="{Binding People}">
-      <DataTemplate>
-        <ListView ItemsSource="{Binding Data}">
+	<Grid utu:SafeArea.Insets="Bottom,Top">
+		<StackPanel>
+			<TextBlock Text="This sample demonstrates how to bind a list of people using ListFeed and display them in a ListView."
+					   Margin="10"
+					   FontSize="16"
+					   TextWrapping="Wrap" />
 
-          <ListView.Footer>
-            <Button Content="Refresh" Command="{Binding Refresh}" />
-          </ListView.Footer>
+			<mvux:FeedView Source="{Binding People}">
+				<DataTemplate>
+					<ListView ItemsSource="{Binding Data}">
 
-          <ListView.ItemTemplate>
-            <DataTemplate>
-              <StackPanel Orientation="Horizontal" Spacing="5">
-                <TextBlock Text="{Binding FirstName}"/>
-                <TextBlock Text="{Binding LastName}"/>
-              </StackPanel>
-            </DataTemplate>
-          </ListView.ItemTemplate>
+						<ListView.Footer>
+							<Button Content="Refresh"
+									Command="{Binding Refresh}" />
+						</ListView.Footer>
 
-        </ListView>
-      </DataTemplate>
-    </mvux:FeedView>
-  </Grid>
+						<ListView.ItemTemplate>
+							<DataTemplate>
+								<StackPanel Orientation="Horizontal"
+											Spacing="5">
+									<TextBlock Text="{Binding FirstName}" />
+									<TextBlock Text="{Binding LastName}" />
+								</StackPanel>
+							</DataTemplate>
+						</ListView.ItemTemplate>
+
+					</ListView>
+				</DataTemplate>
+			</mvux:FeedView>
+		</StackPanel>
+	</Grid>
 </Page>
