chore: adding FeedView sample

--- a/UI/MVUX/MVUX/MVUX/Presentation/MainPage.xaml
+++ b/UI/MVUX/MVUX/MVUX/Presentation/MainPage.xaml
@@ -87,12 +87,19 @@
 					</muxc:NavigationViewItem.Icon>
 				</muxc:NavigationViewItem>
 
-        <muxc:NavigationViewItem uen:Region.Name="FeedViewCommand"
-                                 Content="FeedViewCommand">
-          <muxc:NavigationViewItem.Icon>
-            <SymbolIcon Symbol="Page" />
-          </muxc:NavigationViewItem.Icon>
-        </muxc:NavigationViewItem>
+				<muxc:NavigationViewItem uen:Region.Name="FeedView"
+										 Content="FeedView Page">
+					<muxc:NavigationViewItem.Icon>
+						<SymbolIcon Symbol="Page" />
+					</muxc:NavigationViewItem.Icon>
+				</muxc:NavigationViewItem>
+
+				<muxc:NavigationViewItem uen:Region.Name="FeedViewCommand"
+										 Content="FeedViewCommand">
+					<muxc:NavigationViewItem.Icon>
+						<SymbolIcon Symbol="Page" />
+					</muxc:NavigationViewItem.Icon>
+				</muxc:NavigationViewItem>
 
 				<muxc:NavigationViewItem uen:Region.Name="RefreshSignal"
 										 Content="Refresh ListFeed with Signal">
