--- a/UI/MVUX/MVUX/MVUX/Presentation/FeedViewSample/FeedViewPage.xaml
+++ b/UI/MVUX/MVUX/MVUX/Presentation/FeedViewSample/FeedViewPage.xaml
@@ -21,10 +21,14 @@
 							<TextBlock Text="Selected Person Details:"
                                        FontWeight="Bold"
                                        FontSize="16" />
-							<TextBlock Text="First Name:" />
-							<TextBlock Text="{Binding Data.FirstName}" />
-							<TextBlock Text="Last Name:" />
-							<TextBlock Text="{Binding Data.LastName}" />
+							<TextBlock>
+								<Run Text="First Name:" />
+								<Run Text="{Binding Data.FirstName}" />
+							</TextBlock>
+							<TextBlock>
+								<Run Text="Last Name:" />
+								<Run Text="{Binding Data.LastName}" />
+							</TextBlock>
 						</StackPanel>
 					</DataTemplate>
 				</mvux:FeedView.ValueTemplate>
@@ -39,10 +43,14 @@
 							<TextBlock Text="Selected Person Details:"
                                        FontWeight="Bold"
                                        FontSize="16" />
-							<TextBlock Text="First Name:" />
-							<TextBlock Text="{Binding Data.FirstName}" />
-							<TextBlock Text="Last Name:" />
-							<TextBlock Text="{Binding Data.LastName}" />
+							<TextBlock>
+								<Run Text="First Name:" />
+								<Run Text="{Binding Data.FirstName}" />
+							</TextBlock>
+							<TextBlock>
+								<Run Text="Last Name:" />
+								<Run Text="{Binding Data.LastName}" />
+							</TextBlock>
 						</StackPanel>
 					</DataTemplate>
 				</mvux:FeedView.ValueTemplate>
