feat: Add How to update state section

--- a/UI/MVUX/MVUX/MVUX/Presentation/MainPage.xaml
+++ b/UI/MVUX/MVUX/MVUX/Presentation/MainPage.xaml
@@ -52,57 +52,55 @@
 
 			<muxc:NavigationView.MenuItems>
 
-				<muxc:NavigationViewItem uen:Region.Name="ListFeed"
-										 Content="ListFeed Page">
+				<muxc:NavigationViewItem uen:Region.Name="ListFeed" Content="ListFeed Page">
 					<muxc:NavigationViewItem.Icon>
 						<SymbolIcon Symbol="Page" />
 					</muxc:NavigationViewItem.Icon>
 				</muxc:NavigationViewItem>
 
-				<muxc:NavigationViewItem uen:Region.Name="Feed"
-										 Content="Feed Page">
+				<muxc:NavigationViewItem uen:Region.Name="Feed" Content="Feed Page">
 					<muxc:NavigationViewItem.Icon>
 						<SymbolIcon Symbol="Page" />
 					</muxc:NavigationViewItem.Icon>
 				</muxc:NavigationViewItem>
 
-				<muxc:NavigationViewItem uen:Region.Name="State"
-										 Content="State">
+				<muxc:NavigationViewItem uen:Region.Name="State" Content="State">
 					<muxc:NavigationViewItem.Icon>
 						<SymbolIcon Symbol="Page" />
 					</muxc:NavigationViewItem.Icon>
 				</muxc:NavigationViewItem>
 
-				<muxc:NavigationViewItem uen:Region.Name="Selection"
-										 Content="Selection Page">
+				<muxc:NavigationViewItem uen:Region.Name="UpdateState" Content="How to Update a State">
+					<muxc:NavigationViewItem.Icon>
+						<SymbolIcon Symbol="Refresh" />
+					</muxc:NavigationViewItem.Icon>
+				</muxc:NavigationViewItem>
+
+				<muxc:NavigationViewItem uen:Region.Name="Selection" Content="Selection Page">
 					<muxc:NavigationViewItem.Icon>
 						<SymbolIcon Symbol="Page" />
 					</muxc:NavigationViewItem.Icon>
 				</muxc:NavigationViewItem>
 
-				<muxc:NavigationViewItem uen:Region.Name="Pagination"
-										 Content="Pagination">
+				<muxc:NavigationViewItem uen:Region.Name="Pagination" Content="Pagination">
 					<muxc:NavigationViewItem.Icon>
 						<SymbolIcon Symbol="Page" />
 					</muxc:NavigationViewItem.Icon>
 				</muxc:NavigationViewItem>
 
-				<muxc:NavigationViewItem uen:Region.Name="FeedView"
-										 Content="FeedView Page">
+				<muxc:NavigationViewItem uen:Region.Name="FeedView" Content="FeedView Page">
 					<muxc:NavigationViewItem.Icon>
 						<SymbolIcon Symbol="Page" />
 					</muxc:NavigationViewItem.Icon>
 				</muxc:NavigationViewItem>
 
-				<muxc:NavigationViewItem uen:Region.Name="FeedViewCommand"
-										 Content="FeedViewCommand">
+				<muxc:NavigationViewItem uen:Region.Name="FeedViewCommand" Content="FeedViewCommand">
 					<muxc:NavigationViewItem.Icon>
 						<SymbolIcon Symbol="Page" />
 					</muxc:NavigationViewItem.Icon>
 				</muxc:NavigationViewItem>
 
-				<muxc:NavigationViewItem uen:Region.Name="RefreshSignal"
-										 Content="Refresh ListFeed with Signal">
+				<muxc:NavigationViewItem uen:Region.Name="RefreshSignal" Content="Refresh ListFeed with Signal">
 					<muxc:NavigationViewItem.Icon>
 						<SymbolIcon Symbol="Page" />
 					</muxc:NavigationViewItem.Icon>
@@ -110,8 +108,7 @@
 
 			</muxc:NavigationView.MenuItems>
 
-			<Grid uen:Region.Attached="True"
-				  uen:Region.Navigator="Visibility" />
+			<Grid uen:Region.Attached="True" uen:Region.Navigator="Visibility" />
 		</muxc:NavigationView>
 	</Grid>
 </Page>
