chore: Added labels describing each sample

--- a/UI/MVUX/MVUX/MVUX/Presentation/FeedSample/FeedPage.xaml
+++ b/UI/MVUX/MVUX/MVUX/Presentation/FeedSample/FeedPage.xaml
@@ -9,6 +9,11 @@
 		<mvux:FeedView Source="{Binding Person}">
 			<DataTemplate>
 				<StackPanel>
+					<TextBlock Text="This sample displays a read-only list of people and demonstrates the use of MVUX selection."
+							   Margin="10"
+							   FontSize="16"
+							   TextWrapping="Wrap" />
+
 					<TextBlock Text="Selected Person:"
 							   FontWeight="Bold"
 							   FontSize="16" />
