--- a/UI/MVUX/MVUX/MVUX/Presentation/PaginationSample/PaginationMainPage.xaml
+++ b/UI/MVUX/MVUX/MVUX/Presentation/PaginationSample/PaginationMainPage.xaml
@@ -1,72 +1,82 @@
-﻿<Page
-	x:Class="MVUX.Presentation.PaginationSample.PaginationMainPage"
-	xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-	xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-	xmlns:local="using:MVUX.Presentation.PaginationSample"
-	xmlns:mvux="using:Uno.Extensions.Reactive.UI"
-	xmlns:utu="using:Uno.Toolkit.UI">
+﻿<Page x:Class="MVUX.Presentation.PaginationSample.PaginationMainPage"
+	  xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
+	  xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+	  xmlns:local="using:MVUX.Presentation.PaginationSample"
+	  xmlns:mvux="using:Uno.Extensions.Reactive.UI"
+	  xmlns:utu="using:Uno.Toolkit.UI">
 
-  <Page.Resources>
-	<DataTemplate x:Key="PersonDataTemplate"
-				  x:DataType="local:Person">
-	  <StackPanel Orientation="Horizontal"
-				  Spacing="2">
-		<TextBlock Text="{x:Bind Id}" />
-		<TextBlock Text="{x:Bind FirstName}" />
-		<TextBlock Text="{x:Bind LastName}" />
-	  </StackPanel>
-	</DataTemplate>
+	<Page.Resources>
+		<DataTemplate x:Key="PersonDataTemplate"
+					  x:DataType="local:Person">
+			<StackPanel Orientation="Horizontal"
+						Spacing="2">
+				<TextBlock Text="{x:Bind Id}" />
+				<TextBlock Text="{x:Bind FirstName}" />
+				<TextBlock Text="{x:Bind LastName}" />
+			</StackPanel>
+		</DataTemplate>
 
-	<DataTemplate x:Key="ListViewHeaderTemplate">
-	  <TextBlock Text="{Binding}"
-				 TextWrapping="WrapWholeWords" />
-	</DataTemplate>
-  </Page.Resources>
+		<DataTemplate x:Key="ListViewHeaderTemplate">
+			<TextBlock Text="{Binding}"
+					   TextWrapping="WrapWholeWords" />
+		</DataTemplate>
+	</Page.Resources>
 
-  <Grid utu:SafeArea.Insets="Bottom,Top">
-	<Grid.ColumnDefinitions>
-	  <ColumnDefinition Width="1*" />
-	  <ColumnDefinition Width="Auto" />
-	  <ColumnDefinition Width="1*" />
-	  <ColumnDefinition Width="Auto" />
-	  <ColumnDefinition Width="1*" />
-	</Grid.ColumnDefinitions>
+	<Grid utu:SafeArea.Insets="Bottom,Top">
+		<Grid.RowDefinitions>
+			<RowDefinition Height="Auto" />
+			<RowDefinition Height="*" />
+		</Grid.RowDefinitions>
 
-	<ListView ItemsSource="{Binding PeopleAuto}"
-			  ItemTemplate="{StaticResource PersonDataTemplate}"
-			  Header="Next page auto-loading when on available capacity or scrolled"
-			  HeaderTemplate="{StaticResource ListViewHeaderTemplate}" />
+		<TextBlock Grid.Row="0"
+				   Text="This sample displays a read-only list of people and demonstrates the use of MVUX pagination."
+				   FontSize="16"
+				   HorizontalAlignment="Center"
+				   Margin="0,10,0,10" />
 
-	<Border Grid.Column="1"
-			Width="3"
-			Background="DarkGray" />
+		<Grid Grid.Row="1">
+			<Grid.ColumnDefinitions>
+				<ColumnDefinition Width="1*" />
+				<ColumnDefinition Width="Auto" />
+				<ColumnDefinition Width="1*" />
+				<ColumnDefinition Width="Auto" />
+				<ColumnDefinition Width="1*" />
+			</Grid.ColumnDefinitions>
 
-	<ListView Grid.Column="2"
-			  ItemsSource="{Binding PeopleManual}"
-			  ItemTemplate="{StaticResource PersonDataTemplate}"
-			  Header="Load single page on demand"
-			  HeaderTemplate="{StaticResource ListViewHeaderTemplate}">
+			<ListView ItemsSource="{Binding PeopleAuto}"
+					  ItemTemplate="{StaticResource PersonDataTemplate}"
+					  Header="Next page auto-loading when on available capacity or scrolled"
+					  HeaderTemplate="{StaticResource ListViewHeaderTemplate}" />
 
-	  <ListView.Footer>
-		<NumberBox HorizontalAlignment="Center"
-				   Header="Current page:"
-				   Minimum="1"
-				   Maximum="{Binding PageCount}"
-				   SpinButtonPlacementMode="Inline"
-				   Value="{Binding CurrentPage, Mode=TwoWay}" />
-	  </ListView.Footer>
-	</ListView>
+			<Border Grid.Column="1"
+					Width="3"
+					Background="DarkGray" />
 
-	<Border Grid.Column="3"
-			Width="3"
-			Background="DarkGray" />
+			<ListView Grid.Column="2"
+					  ItemsSource="{Binding PeopleManual}"
+					  ItemTemplate="{StaticResource PersonDataTemplate}"
+					  Header="Load single page on demand"
+					  HeaderTemplate="{StaticResource ListViewHeaderTemplate}">
 
-	<ListView Grid.Column="4"
-			  ItemsSource="{Binding PeopleCursor}"
-			  ItemTemplate="{StaticResource PersonDataTemplate}"
-			  Header="Load single page by cursor"
-			  HeaderTemplate="{StaticResource ListViewHeaderTemplate}" />
-  </Grid>
+				<ListView.Footer>
+					<NumberBox HorizontalAlignment="Center"
+							   Header="Current page:"
+							   Minimum="1"
+							   Maximum="{Binding PageCount}"
+							   SpinButtonPlacementMode="Inline"
+							   Value="{Binding CurrentPage, Mode=TwoWay}" />
+				</ListView.Footer>
+			</ListView>
+
+			<Border Grid.Column="3"
+					Width="3"
+					Background="DarkGray" />
+
+			<ListView Grid.Column="4"
+					  ItemsSource="{Binding PeopleCursor}"
+					  ItemTemplate="{StaticResource PersonDataTemplate}"
+					  Header="Load single page by cursor"
+					  HeaderTemplate="{StaticResource ListViewHeaderTemplate}" />
+		</Grid>
+	</Grid>
 </Page>
-
-  
