--- a/UI/MVUX/MVUX/MVUX/Presentation/MainPage.xaml
+++ b/UI/MVUX/MVUX/MVUX/Presentation/MainPage.xaml
@@ -54,19 +54,19 @@
 
 				<muxc:NavigationViewItem uen:Region.Name="ListFeed" Content="ListFeed Page">
 					<muxc:NavigationViewItem.Icon>
-						<SymbolIcon Symbol="Page" />
+						<SymbolIcon Symbol="List" />
 					</muxc:NavigationViewItem.Icon>
 				</muxc:NavigationViewItem>
 
 				<muxc:NavigationViewItem uen:Region.Name="Feed" Content="Feed Page">
 					<muxc:NavigationViewItem.Icon>
-						<SymbolIcon Symbol="Page" />
+						<SymbolIcon Symbol="PostUpdate" />
 					</muxc:NavigationViewItem.Icon>
 				</muxc:NavigationViewItem>
 
 				<muxc:NavigationViewItem uen:Region.Name="State" Content="State">
 					<muxc:NavigationViewItem.Icon>
-						<SymbolIcon Symbol="Page" />
+						<SymbolIcon Symbol="Sync" />
 					</muxc:NavigationViewItem.Icon>
 				</muxc:NavigationViewItem>
 
@@ -78,31 +78,31 @@
 
 				<muxc:NavigationViewItem uen:Region.Name="Selection" Content="Selection Page">
 					<muxc:NavigationViewItem.Icon>
-						<SymbolIcon Symbol="Page" />
+						<SymbolIcon Symbol="Bullets" />
 					</muxc:NavigationViewItem.Icon>
 				</muxc:NavigationViewItem>
 
 				<muxc:NavigationViewItem uen:Region.Name="Pagination" Content="Pagination">
 					<muxc:NavigationViewItem.Icon>
-						<SymbolIcon Symbol="Page" />
+						<SymbolIcon Symbol="Forward" />
 					</muxc:NavigationViewItem.Icon>
 				</muxc:NavigationViewItem>
 
 				<muxc:NavigationViewItem uen:Region.Name="FeedView" Content="FeedView Page">
 					<muxc:NavigationViewItem.Icon>
-						<SymbolIcon Symbol="Page" />
+						<SymbolIcon Symbol="View" />
 					</muxc:NavigationViewItem.Icon>
 				</muxc:NavigationViewItem>
 
-				<muxc:NavigationViewItem uen:Region.Name="FeedViewCommand" Content="FeedViewCommand">
+				<muxc:NavigationViewItem uen:Region.Name="FeedViewCommand" Content="FeedView Command">
 					<muxc:NavigationViewItem.Icon>
-						<SymbolIcon Symbol="Page" />
+						<SymbolIcon Symbol="Play" />
 					</muxc:NavigationViewItem.Icon>
 				</muxc:NavigationViewItem>
 
 				<muxc:NavigationViewItem uen:Region.Name="RefreshSignal" Content="Refresh ListFeed with Signal">
 					<muxc:NavigationViewItem.Icon>
-						<SymbolIcon Symbol="Page" />
+						<SymbolIcon Symbol="Sync" />
 					</muxc:NavigationViewItem.Icon>
 				</muxc:NavigationViewItem>
 
