--- a/UI/MVUX/MVUX/Presentation/FeedSample/FeedPage.xaml
+++ b/UI/MVUX/MVUX/Presentation/FeedSample/FeedPage.xaml
@@ -1,28 +1,26 @@
 ﻿<Page x:Class="MVUX.Presentation.FeedSample.FeedPage"
 	  xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
 	  xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-	  xmlns:mvux="using:Uno.Extensions.Reactive.UI"
 	  xmlns:utu="using:Uno.Toolkit.UI"
 	  Background="{ThemeResource ApplicationPageBackgroundThemeBrush}">
-
+	
 	<Grid utu:SafeArea.Insets="Bottom,Top">
-		<mvux:FeedView Source="{Binding Person}">
-			<DataTemplate>
-				<StackPanel>
-					<TextBlock Text="This sample displays a read-only list of people and demonstrates the use of MVUX selection."
-							   Margin="10"
-							   FontSize="16"
-							   TextWrapping="Wrap" />
-
-					<TextBlock Text="Selected Person:"
-							   FontWeight="Bold"
-							   FontSize="16" />
-					<TextBlock Text="{Binding Data.FirstName}"
-							   FontSize="14" />
-					<TextBlock Text="{Binding Data.LastName}"
-							   FontSize="14" />
-				</StackPanel>
-			</DataTemplate>
-		</mvux:FeedView>
+		<StackPanel>
+			<TextBlock Text="This sample demonstrates the use of MVUX feeds by randomly selecting a person from a list."
+					   Margin="10"
+					   FontSize="16"
+					   TextWrapping="Wrap" />
+			<TextBlock Text="Randomly Selected Person:"
+					   FontWeight="Bold"
+					   FontSize="16" />
+			<TextBlock>
+				<Run Text="First Name:" />
+				<Run Text="{Binding Person.Value.FirstName}" />
+			</TextBlock>
+			<TextBlock>
+				<Run Text="Last Name:" />
+				<Run Text="{Binding Person.Value.LastName}" />
+			</TextBlock>
+		</StackPanel>
 	</Grid>
 </Page>
