--- a/UI/MVUX/MVUX/Presentation/MainPage.xaml
+++ b/UI/MVUX/MVUX/Presentation/MainPage.xaml
@@ -52,57 +52,72 @@
 
 			<muxc:NavigationView.MenuItems>
 
-				<muxc:NavigationViewItem uen:Region.Name="ListFeed" Content="ListFeed Page">
+				<muxc:NavigationViewItem uen:Region.Name="ListFeed"
+										 Content="ListFeed Page">
 					<muxc:NavigationViewItem.Icon>
 						<SymbolIcon Symbol="List" />
 					</muxc:NavigationViewItem.Icon>
 				</muxc:NavigationViewItem>
 
-				<muxc:NavigationViewItem uen:Region.Name="Feed" Content="Feed Page">
+				<muxc:NavigationViewItem uen:Region.Name="Feed"
+										 Content="Feed Page">
 					<muxc:NavigationViewItem.Icon>
 						<SymbolIcon Symbol="PostUpdate" />
 					</muxc:NavigationViewItem.Icon>
 				</muxc:NavigationViewItem>
 
-				<muxc:NavigationViewItem uen:Region.Name="UpdateState" Content="How to Update a State">
+				<muxc:NavigationViewItem uen:Region.Name="UpdateState"
+										 Content="How to Update a State">
 					<muxc:NavigationViewItem.Icon>
 						<SymbolIcon Symbol="Refresh" />
 					</muxc:NavigationViewItem.Icon>
 				</muxc:NavigationViewItem>
 
-				<muxc:NavigationViewItem uen:Region.Name="Selection" Content="Selection Page">
+				<muxc:NavigationViewItem uen:Region.Name="Selection"
+										 Content="Selection Page">
 					<muxc:NavigationViewItem.Icon>
 						<SymbolIcon Symbol="Bullets" />
 					</muxc:NavigationViewItem.Icon>
 				</muxc:NavigationViewItem>
 
-				<muxc:NavigationViewItem uen:Region.Name="Pagination" Content="Pagination">
+				<muxc:NavigationViewItem uen:Region.Name="Pagination"
+										 Content="Pagination">
 					<muxc:NavigationViewItem.Icon>
 						<SymbolIcon Symbol="Forward" />
 					</muxc:NavigationViewItem.Icon>
 				</muxc:NavigationViewItem>
 
-				<muxc:NavigationViewItem uen:Region.Name="FeedView" Content="FeedView Page">
+				<muxc:NavigationViewItem uen:Region.Name="FeedView"
+										 Content="FeedView Page">
 					<muxc:NavigationViewItem.Icon>
 						<SymbolIcon Symbol="View" />
 					</muxc:NavigationViewItem.Icon>
 				</muxc:NavigationViewItem>
 
-				<muxc:NavigationViewItem uen:Region.Name="FeedViewCommand" Content="FeedView Command">
+				<muxc:NavigationViewItem uen:Region.Name="FeedViewCommand"
+										 Content="FeedView Command">
 					<muxc:NavigationViewItem.Icon>
 						<SymbolIcon Symbol="Play" />
 					</muxc:NavigationViewItem.Icon>
 				</muxc:NavigationViewItem>
 
-				<muxc:NavigationViewItem uen:Region.Name="RefreshSignal" Content="Refresh ListFeed with Signal">
+				<muxc:NavigationViewItem uen:Region.Name="Messenger"
+										 Content="Update feed using IMessenger">
 					<muxc:NavigationViewItem.Icon>
-						<SymbolIcon Symbol="Sync" />
+						<SymbolIcon Symbol="Play" />
 					</muxc:NavigationViewItem.Icon>
 				</muxc:NavigationViewItem>
 
+				<!--<muxc:NavigationViewItem uen:Region.Name="RefreshSignal" Content="Refresh ListFeed with Signal">
+					<muxc:NavigationViewItem.Icon>
+						<SymbolIcon Symbol="Sync" />
+					</muxc:NavigationViewItem.Icon>
+				</muxc:NavigationViewItem>-->
+
 			</muxc:NavigationView.MenuItems>
 
-			<Grid uen:Region.Attached="True" uen:Region.Navigator="Visibility" />
+			<Grid uen:Region.Attached="True"
+				  uen:Region.Navigator="Visibility" />
 		</muxc:NavigationView>
 	</Grid>
 </Page>
