--- a/UI/MVUX/MVUX/Presentation/IMessengerSample/MessagingPage.xaml
+++ b/UI/MVUX/MVUX/Presentation/IMessengerSample/MessagingPage.xaml
@@ -1,4 +1,5 @@
-﻿<Page x:Class="MVUX.Presentation.IMessengerSample.MessagingPage"
+﻿<Page x:Name="peopleView"
+	  x:Class="MVUX.Presentation.IMessengerSample.MessagingPage"
 	  xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
 	  xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
 	  xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
@@ -40,7 +41,8 @@
 						<TextBlock Text="{Binding LastName}" />
 
 						<Button Content="Remove"
-								Command="{Binding RemovePerson}" />
+								Command="{Binding DataContext.RemovePerson, ElementName=peopleView}"
+								CommandParameter="{Binding}" />
 					</StackPanel>
 
 				</DataTemplate>
