--- a/UI/MVUX/MVUX/Presentation/MainPage.xaml
+++ b/UI/MVUX/MVUX/Presentation/MainPage.xaml
@@ -102,9 +102,9 @@
 				</muxc:NavigationViewItem>
 
 				<muxc:NavigationViewItem uen:Region.Name="Messenger"
-										 Content="Update feed using IMessenger">
+										 Content="Update Feed using IMessenger">
 					<muxc:NavigationViewItem.Icon>
-						<SymbolIcon Symbol="Play" />
+						<SymbolIcon Symbol="Refresh" />
 					</muxc:NavigationViewItem.Icon>
 				</muxc:NavigationViewItem>
 
