--- a/UI/MVUX/src/MVUX/Presentation/PaginationSample/PaginationPage.xaml
+++ b/UI/MVUX/src/MVUX/Presentation/PaginationSample/PaginationPage.xaml
@@ -1,4 +1,4 @@
-﻿<Page x:Class="MVUX.Presentation.PaginationSample.PaginationMainPage"
+﻿<Page x:Class="MVUX.Presentation.PaginationSample.PaginationPage"
 	  xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
 	  xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
 	  xmlns:local="using:MVUX.Presentation.PaginationSample"
