--- a/UI/Benchmark/AppBenchmark/AppBenchmark/App.xaml
+++ b/UI/Benchmark/AppBenchmark/AppBenchmark/App.xaml
@@ -1,6 +1,6 @@
-<Application x:Class="AppBenchmark.App"
-       xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-       xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml">
+﻿<Application x:Class="AppBenchmark.App"
+             xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
+             xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml">
 
   <Application.Resources>
     <ResourceDictionary>
