chore: Update CardView to Uno.Sdk 5.4

--- a/UI/CardViewMigration/CardViewMigration/CardViewMigration/Controls/CardView.xaml
+++ b/UI/CardViewMigration/CardViewMigration/CardViewMigration/Controls/CardView.xaml
@@ -1,24 +1,24 @@
-﻿<ContentControl
-    x:Class="CardViewMigration.Controls.CardView"
-    xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-    xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-    xmlns:local="using:CardViewMigration.Controls"
-    xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
-    xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-    mc:Ignorable="d"
-    BorderThickness="1"
-    BorderBrush="Gray"
-    d:DesignHeight="300"
-    d:DesignWidth="400">
+﻿<ContentControl x:Class="CardViewMigration.Controls.CardView"
+                xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
+                xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+                xmlns:local="using:CardViewMigration.Controls"
+                xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
+                xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+                mc:Ignorable="d"
+                BorderThickness="1"
+                BorderBrush="Gray"
+                d:DesignHeight="300"
+                d:DesignWidth="400">
 
-    <Border x:Name="CardBorder" DataContext="{x:Bind}"
-           Background="{Binding CardBrush}"
-           BorderBrush="{Binding BorderBrush}"
+    <Border x:Name="CardBorder"
+            DataContext="{x:Bind}"
+            Background="{Binding CardBrush}"
+            BorderBrush="{Binding BorderBrush}"
             BorderThickness="{Binding BorderThickness}"
-           CornerRadius="5"
-           Padding="8"
-           VerticalAlignment="Center"
-           HorizontalAlignment="Center">
+            CornerRadius="5"
+            Padding="8"
+            VerticalAlignment="Center"
+            HorizontalAlignment="Center">
         <Border.Shadow>
             <ThemeShadow />
         </Border.Shadow>
@@ -33,12 +33,12 @@
                 <ColumnDefinition Width="200" />
             </Grid.ColumnDefinitions>
             <Border BorderBrush="{Binding BorderBrush, FallbackValue='Black'}"
-                   Background="{Binding IconBackgroundBrush, FallbackValue='Gray'}"
-                   CornerRadius="38"
-                   Height="60"
-                   Width="60"
-                   HorizontalAlignment="Center"
-                   VerticalAlignment="Center">
+                    Background="{Binding IconBackgroundBrush, FallbackValue='Gray'}"
+                    CornerRadius="38"
+                    Height="60"
+                    Width="60"
+                    HorizontalAlignment="Center"
+                    VerticalAlignment="Center">
                 <Image Source="{Binding IconImageSource}"
                        Margin="-20"
                        Width="60"
@@ -46,22 +46,22 @@
                        Stretch="UniformToFill"/>
             </Border>
             <TextBlock Grid.Column="1"
-                   Text="{Binding CardTitle, FallbackValue='Card Title'}"
-                   FontWeight="Bold"
-                   FontSize="20"
+                       Text="{Binding CardTitle, FallbackValue='Card Title'}"
+                       FontWeight="Bold"
+                       FontSize="20"
                        VerticalAlignment="Center"
-                   HorizontalTextAlignment="Start" />
+                       HorizontalTextAlignment="Start" />
             <Rectangle Grid.Row="1"
-                     Grid.ColumnSpan="2"
-                     Fill="{Binding BorderBrush, FallbackValue='Black'}"
-                     Height="2"
-                     HorizontalAlignment="Stretch" />
+                       Grid.ColumnSpan="2"
+                       Fill="{Binding BorderBrush, FallbackValue='Black'}"
+                       Height="2"
+                       HorizontalAlignment="Stretch" />
             <TextBlock Grid.Row="2"
-                   Grid.ColumnSpan="2"
-                   Text="{Binding CardDescription, FallbackValue='Card description text.'}"
+                       Grid.ColumnSpan="2"
+                       Text="{Binding CardDescription, FallbackValue='Card description text.'}"
                        TextWrapping="WrapWholeWords"
-                   VerticalAlignment="Stretch"
-                   HorizontalAlignment="Stretch" />
+                       VerticalAlignment="Stretch"
+                       HorizontalAlignment="Stretch" />
         </Grid>
     </Border>
 </ContentControl>
