--- a/UI/CardViewMigration/CardViewMigration/CardViewMigration/CardViewCodePage.xaml
+++ b/UI/CardViewMigration/CardViewMigration/CardViewMigration/CardViewCodePage.xaml
@@ -1,12 +1,11 @@
-﻿<Page
-    x:Class="CardViewMigration.CardViewCodePage"
-    xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-    xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-    xmlns:local="using:CardViewMigration"
-    xmlns:utu="using:Uno.Toolkit.UI"
-    xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
-    xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-    mc:Ignorable="d"
-    Background="{ThemeResource ApplicationPageBackgroundThemeBrush}"
-    utu:SafeArea.Insets="Top">
+﻿<Page x:Class="CardViewMigration.CardViewCodePage"
+      xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
+      xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+      xmlns:local="using:CardViewMigration"
+      xmlns:utu="using:Uno.Toolkit.UI"
+      xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
+      xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+      mc:Ignorable="d"
+      Background="{ThemeResource ApplicationPageBackgroundThemeBrush}"
+      utu:SafeArea.Insets="Top">
 </Page>
