--- a/UI/CardViewMigration/CardViewMigration/CardViewMigration/ControlTemplatePage.xaml
+++ b/UI/CardViewMigration/CardViewMigration/CardViewMigration/ControlTemplatePage.xaml
@@ -1,14 +1,13 @@
-﻿<Page
-    x:Class="CardViewMigration.ControlTemplatePage"
-    xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-    xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-    xmlns:local="using:CardViewMigration"
-    xmlns:utu="using:Uno.Toolkit.UI"
-    xmlns:controls="using:CardViewMigration.Controls"
-    xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
-    xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-    mc:Ignorable="d"
-    Background="{ThemeResource ApplicationPageBackgroundThemeBrush}">
+﻿<Page x:Class="CardViewMigration.ControlTemplatePage"
+      xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
+      xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+      xmlns:local="using:CardViewMigration"
+      xmlns:utu="using:Uno.Toolkit.UI"
+      xmlns:controls="using:CardViewMigration.Controls"
+      xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
+      xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+      mc:Ignorable="d"
+      Background="{ThemeResource ApplicationPageBackgroundThemeBrush}">
 
     <Page.Resources>
         <ResourceDictionary>
@@ -29,8 +28,7 @@
                            HorizontalAlignment="Center"
                            VerticalAlignment="Center" />
                     <StackPanel Grid.Column="1">
-                        <TextBlock Text="{TemplateBinding CardTitle}"
-                               FontWeight="Bold" />
+                        <TextBlock Text="{TemplateBinding CardTitle}" FontWeight="Bold" />
                         <TextBlock Text="{TemplateBinding CardDescription}" TextWrapping="WrapWholeWords" />
                     </StackPanel>
                 </Grid>
@@ -49,19 +47,19 @@
                 ToolTipService.ToolTip="Back"/>
         
         <TextBlock Text="A standard CardView control is suitable for grid layouts:"
-              TextWrapping="WrapWholeWords"
-               Foreground="Red"
-               Margin="0,0,0,10" />
+                   TextWrapping="WrapWholeWords"
+                   Foreground="Red"
+                   Margin="0,0,0,10" />
         <controls:CardView BorderBrush="DarkGray"
                            CardTitle="Slavko Vlasic"
                            CardDescription="Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla elit dolor, convallis non interdum."
                            IconBackgroundBrush="SlateGray"
                            IconImageSource="ms-appx:///Assets/user.png"/>
         <TextBlock Text="A ControlTemplate overrides the standard view, creating a more compact view suitable for lists:"
-               FontStyle="Italic"
-               Foreground="Red"
-               TextWrapping="WrapWholeWords"
-               Margin="0,0,0,10" />
+                   FontStyle="Italic"
+                   Foreground="Red"
+                   TextWrapping="WrapWholeWords"
+                   Margin="0,0,0,10" />
         <controls:CardView BorderBrush="DarkGray"
                            CardTitle="Carolina Pena"
                            CardDescription="Phasellus eu convallis mi. In tempus augue eu dignissim fermentum. Morbi ut lacus vitae eros lacinia."
