feat: Updating Commerce to 5.6 and dotnet9

--- a/reference/Commerce/src/Commerce/App.xaml
+++ b/reference/Commerce/src/Commerce/App.xaml
@@ -29,6 +29,7 @@
       </ResourceDictionary.MergedDictionaries>
       
       <x:Double x:Key="LandscapeMaxPageWidth">500</x:Double>
+      <x:Double x:Key="WideMinWindowWidth">800</x:Double>
       
     </ResourceDictionary>
   </Application.Resources>
