--- a/reference/Commerce/src/Commerce/Views/DealsPage.xaml
+++ b/reference/Commerce/src/Commerce/Views/DealsPage.xaml
@@ -91,7 +91,7 @@
 				<VisualState x:Name="Narrow" />
 				<VisualState x:Name="Wide">
 					<VisualState.StateTriggers>
-						<AdaptiveTrigger MinWindowWidth="{StaticResource WideMinWindowWidthh}" />
+						<AdaptiveTrigger MinWindowWidth="{StaticResource WideMinWindowWidth}" />
 					</VisualState.StateTriggers>
 					<VisualState.Setters>
 						<Setter Target="DealsColumn.Width" Value="*" />
@@ -154,7 +154,7 @@
 										<VisualStateGroup>
 											<VisualState x:Name="Wide">
 												<VisualState.StateTriggers>
-													<AdaptiveTrigger MinWindowWidth="{StaticResource WideMinWindowWidthh}" />
+													<AdaptiveTrigger MinWindowWidth="{StaticResource WideMinWindowWidth}" />
 												</VisualState.StateTriggers>
 												<VisualState.Setters>
 													<Setter Target="DealsListView.SelectionMode" Value="Single" />
@@ -206,7 +206,7 @@
 										<VisualStateGroup>
 											<VisualState x:Name="Wide">
 												<VisualState.StateTriggers>
-													<AdaptiveTrigger MinWindowWidth="{StaticResource WideMinWindowWidthh}" />
+													<AdaptiveTrigger MinWindowWidth="{StaticResource WideMinWindowWidth}" />
 												</VisualState.StateTriggers>
 												<VisualState.Setters>
 													<Setter Target="DealsListView.SelectionMode" Value="Single" />
