--- a/reference/Commerce/src/Commerce/Views/ProductsPage.xaml
+++ b/reference/Commerce/src/Commerce/Views/ProductsPage.xaml
@@ -28,7 +28,7 @@
 				<VisualState x:Name="Narrow" />
 				<VisualState x:Name="Wide">
 					<VisualState.StateTriggers>
-						<AdaptiveTrigger MinWindowWidth="{StaticResource WideMinWindowWidthh}" />
+						<AdaptiveTrigger MinWindowWidth="{StaticResource WideMinWindowWidth}" />
 					</VisualState.StateTriggers>
 					<VisualState.Setters>
 						<Setter Target="ProductsColumn.Width" Value="*" />
@@ -82,7 +82,7 @@
 										<VisualStateGroup>
 											<VisualState x:Name="Wide">
 												<VisualState.StateTriggers>
-													<AdaptiveTrigger MinWindowWidth="{StaticResource WideMinWindowWidthh}" />
+													<AdaptiveTrigger MinWindowWidth="{StaticResource WideMinWindowWidth}" />
 												</VisualState.StateTriggers>
 												<VisualState.Setters>
 													<Setter Target="ProductsListView.SelectionMode" Value="Single" />
