--- a/UI/MauiEmbedding/TelerikApp/src/TelerikApp/TelerikApp.MauiControls/Views/BadgeSample.xaml
+++ b/UI/MauiEmbedding/TelerikApp/src/TelerikApp/TelerikApp.MauiControls/Views/BadgeSample.xaml
@@ -1,4 +1,4 @@
-<?xml version="1.0" encoding="utf-8" ?>
+﻿<?xml version="1.0" encoding="utf-8" ?>
 <ContentView xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
 			 xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
 			 xmlns:telerik="http://schemas.telerik.com/2022/xaml/maui"
@@ -41,16 +41,16 @@
 						Value="Micro" />
 			</Style>
 			<!-- TODO: Uncomment -->
-			<!--<Style x:Key="DefaultBadgeViewStyle" TargetType="telerik:RadBadgeView">
+			<Style x:Key="DefaultBadgeViewStyle" TargetType="telerik:RadBadgeView">
                 <Setter Property="HorizontalOptions" Value="Center" />
                 <Setter Property="BadgeVerticalAlignment" Value="Start" />
-            </Style>-->
+            </Style>
 		</ResourceDictionary>
 	</ContentView.Resources>
 	<Grid RowDefinitions="*, Auto">
 		<Label Text="Badge Sample (Search for TODO and apply comments)" />
 		<!-- TODO: Uncomment -->
-		<!--  <telerik:RadItemsControl Grid.Row="0"
+		  <telerik:RadItemsControl Grid.Row="0"
                                  ItemsSource="{Binding Users}">
       <telerik:RadItemsControl.ItemTemplate>
         <DataTemplate>
@@ -150,6 +150,6 @@
           </StackLayout>
         </telerik:RadBadgeView.Content>
       </telerik:RadBadgeView>
-    </Grid>-->
+    </Grid>
 	</Grid>
 </ContentView>
