--- a/UI/MauiEmbedding/TelerikApp/src/TelerikApp/TelerikApp.MauiControls/Views/DataGridSample.xaml
+++ b/UI/MauiEmbedding/TelerikApp/src/TelerikApp/TelerikApp.MauiControls/Views/DataGridSample.xaml
@@ -1,12 +1,11 @@
-<?xml version="1.0" encoding="utf-8" ?>
+﻿<?xml version="1.0" encoding="utf-8" ?>
 <ContentView xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              xmlns:telerik="http://schemas.telerik.com/2022/xaml/maui"
              x:Class="TelerikApp.MauiControls.DataGridSample">
 	<Grid>
 		<Label Text="DataGrid Sample (Search for TODO and apply comments)" />
-		<!-- TODO: Uncomment -->
-		<!--<telerik:RadDataGrid Grid.Row="1"
+		<telerik:RadDataGrid Grid.Row="1"
                          ItemsSource="{Binding People}"
                          AutoGenerateColumns="False"
                          SelectionUnit="Row"
@@ -29,7 +28,7 @@
                                        SizeMode="Auto" />
         <telerik:DataGridNumericalColumn PropertyName="Id"
                                          HeaderText="Id" />
-        --><!--<telerik:DataGridTemplateColumn HeaderText="Country"
+        <telerik:DataGridTemplateColumn HeaderText="Country"
                                         MinimumWidth="40">
           <telerik:DataGridTemplateColumn.CellContentTemplate>
             <DataTemplate>
@@ -40,8 +39,8 @@
               </Grid>
             </DataTemplate>
           </telerik:DataGridTemplateColumn.CellContentTemplate>
-        </telerik:DataGridTemplateColumn>--><!--
+        </telerik:DataGridTemplateColumn>
       </telerik:RadDataGrid.Columns>
-    </telerik:RadDataGrid>-->
+    </telerik:RadDataGrid>
   </Grid>
 </ContentView>
