--- a/UI/MauiEmbedding/TelerikApp/src/TelerikApp/TelerikApp/Presentation/MainPage.notelerik.xaml
+++ b/UI/MauiEmbedding/TelerikApp/src/TelerikApp/TelerikApp/Presentation/MainPage.notelerik.xaml
@@ -1,4 +1,4 @@
-<Page x:Class="TelerikApp.Presentation.MainPage"
+﻿<Page x:Class="TelerikApp.Presentation.MainPage"
 	  xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
 	  xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
 	  xmlns:local="using:TelerikApp.Presentation"
@@ -36,7 +36,7 @@
 				</NavigationViewItem>
 			</NavigationView.MenuItems>
 			<Grid uen:Region.Attached="True"
-				  uen:Region.Navigator="Visibility">
+							 uen:Region.Navigator="Visibility">
 				<embed:MauiHost xmlns:embed="using:Uno.Extensions.Maui"
 								uen:Region.Name="Accordion"
 								Source="controls:AccordionSample"
