--- a/UI/MauiEmbedding/TelerikApp/src/TelerikApp/TelerikApp.MauiControls/Views/AreaChartSample.xaml
+++ b/UI/MauiEmbedding/TelerikApp/src/TelerikApp/TelerikApp.MauiControls/Views/AreaChartSample.xaml
@@ -1,10 +1,10 @@
-<?xml version="1.0" encoding="utf-8" ?>
+﻿<?xml version="1.0" encoding="utf-8" ?>
 <ContentView xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
 			 xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
 			 xmlns:telerik="http://schemas.telerik.com/2022/xaml/maui"
 			 x:Class="TelerikApp.MauiControls.AreaChartSample">
 	<!-- TODO: Uncomment -->
-	<!--<ContentView.Resources>
+	<ContentView.Resources>
     <ResourceDictionary>
       <DataTemplate x:Key="lineArea">
         <telerik:RadCartesianChart BackgroundColor="{AppThemeBinding Light=White}">
@@ -141,7 +141,7 @@
         </telerik:RadCartesianChart>
       </DataTemplate>
     </ResourceDictionary>
-  </ContentView.Resources>-->
+  </ContentView.Resources>
 	<Label Text="AreaChart Sample (Search for TODO and apply comments)" />
 
 </ContentView>
