--- a/UI/MauiEmbedding/TelerikApp/src/TelerikApp/TelerikApp.MauiControls/Views/CalendarSample.xaml
+++ b/UI/MauiEmbedding/TelerikApp/src/TelerikApp/TelerikApp.MauiControls/Views/CalendarSample.xaml
@@ -1,10 +1,10 @@
-<?xml version="1.0" encoding="utf-8" ?>
+﻿<?xml version="1.0" encoding="utf-8" ?>
 <ContentView xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
 			 xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
 			 xmlns:telerik="http://schemas.telerik.com/2022/xaml/maui"
 			 x:Class="TelerikApp.MauiControls.CalendarSample">
 	<!-- TODO: Uncomment -->
-	<!--<ContentView.Resources>
+	<ContentView.Resources>
 		<ResourceDictionary>
 			<DataTemplate x:Key="ReminderTemplate">
 				<telerik:RadBorder BackgroundColor="{AppThemeBinding Light=#F3F3F3, Dark=#202020}"
@@ -35,7 +35,7 @@
 				</Grid>
 			</DataTemplate>
 		</ResourceDictionary>
-	</ContentView.Resources>-->
+	</ContentView.Resources>
 
 	<Grid RowDefinitions="Auto, *"
 		  ColumnDefinitions="Auto, *"
@@ -44,7 +44,7 @@
 		  Padding="{OnIdiom Default=0, Phone=16}">
 		<Label Text="DataGrid Sample (Search for TODO and apply comments)" />
 		<!-- TODO: Uncomment -->
-		<!--<telerik:RadCalendar x:Name="calendar"
+		<telerik:RadCalendar x:Name="calendar"
 							 Grid.Column="{OnIdiom Default=1, Desktop=0}"
 							 FirstDayOfWeek="Monday"
 							 SelectedDate="{Binding SelectedDate, Mode=TwoWay}"
@@ -66,6 +66,6 @@
 					   Text="No reminders for this day"
 					   TextColor="{StaticResource AccentColor4}" />
 			</Grid>
-		</Grid>-->
+		</Grid>
 	</Grid>
 </ContentView>
