--- a/UI/MauiEmbedding/TelerikApp/src/TelerikApp/TelerikApp.MauiControls/Views/GaugeSample.xaml
+++ b/UI/MauiEmbedding/TelerikApp/src/TelerikApp/TelerikApp.MauiControls/Views/GaugeSample.xaml
@@ -1,12 +1,11 @@
-<?xml version="1.0" encoding="utf-8" ?>
+﻿<?xml version="1.0" encoding="utf-8" ?>
 <ContentView xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              xmlns:telerik="http://schemas.telerik.com/2022/xaml/maui"
              x:Class="TelerikApp.MauiControls.GaugeSample">
   <Grid>
 		<Label Text="Gauge Sample (Search for TODO and apply comments)" />
-		<!-- TODO: Uncomment -->
-		<!--<telerik:RadRadialGauge x:Name="gauge">
+		<telerik:RadRadialGauge x:Name="gauge">
       <telerik:RadRadialGauge.Axis>
         <telerik:GaugeLinearAxis Maximum="200"
                                  Minimum="0"
@@ -27,6 +26,6 @@
           </telerik:GaugeGradientRange>
         </telerik:GaugeRangesDefinition>
       </telerik:RadRadialGauge.Ranges>
-    </telerik:RadRadialGauge>-->
+    </telerik:RadRadialGauge>
   </Grid>
 </ContentView>
