chore: add windows support

--- a/UI/NativeElementHostingDesktop/NativeElementHostingDesktop/MainPage.xaml
+++ b/UI/NativeElementHostingDesktop/NativeElementHostingDesktop/MainPage.xaml
@@ -9,7 +9,7 @@
         HorizontalAlignment="Center"
         VerticalAlignment="Center">
         <TextBlock AutomationProperties.AutomationId="HelloTextBlock"
-          Text="You should see an Xterm  terminal window on Linux."
+          Text="You should see an Xterm terminal window on Linux and a Powershell window on Windows."
           HorizontalAlignment="Center" />
         <ContentPresenter Width="300" Height="300" x:Name="cp" />
       </StackPanel>
