chore: remove dependson from nav sample

--- a/UI/Navigation/src/Navigation/Presentation/MainPage.xaml
+++ b/UI/Navigation/src/Navigation/Presentation/MainPage.xaml
@@ -51,7 +51,7 @@
 
 			<muxc:NavigationView.MenuItems>
 
-				<muxc:NavigationViewItem uen:Region.Name="./PageNavigation"
+				<muxc:NavigationViewItem uen:Region.Name="PageNavigation"
 										 Content="Page Navigation">
 					<muxc:NavigationViewItem.Icon>
 						<SymbolIcon Symbol="Page" />
